# fullstack/server/Application/Models/Dtos/Service/ServiceUpdateRequestDto.cs
@@ -7,7 +7,7 @@ public class ServiceUpdateRequestDto
     [Required] public string Id { get; set; } = null!;
     [Required] public string Name { get; set; } = null!;
     [Required] public string Description { get; set; } = null!;
-    [Required] public string ImageUrl { get; set; } = null!;
+    public string ImageUrl { get; set; } = null!;
     [Required] public string PublicId { get; set; } = null!;
     
 }
