# fullstack/server/Startup/openapi.json
@@ -1540,7 +1540,6 @@
           "id",
           "name",
           "description",
-          "imageUrl",
           "publicId"
         ],
         "properties": {
@@ -1557,8 +1556,7 @@
             "minLength": 1
           },
           "imageUrl": {
-            "type": "string",
-            "minLength": 1
+            "type": "string"
           },
           "publicId": {
             "type": "string",
